--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest-cov = "^3.0.0"
 black = "^22.3.0"
 requests = "^2.27.1"
 firebase-admin = "^5.2.0"
+exponent-server-sdk = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
