--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -86,6 +86,10 @@ jobs:
       - name: Test with pytest
         run: ./scripts/coverage-container.sh
       #----------------------------------------------
+      #    setup files
+      #----------------------------------------------
+      - run: sudo mv ./docker/cov/coverage.xml ./coverage.xml && sudo rm -rf ./docker
+      #----------------------------------------------
       #             upload coverage stats
       # (requires CODECOV_TOKEN in repository secrets)
       #----------------------------------------------
